# oubli

./: .env.example  .gitignore  .mainnet.env.example  .sepolia.env.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  daily-spending-wallet-guidance-review.md  mobile-ux-audit.md  oubli.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  zapstore.yml
android/: CLAUDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts  zapstore.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/oubli/wallet/: MainActivity.kt  OubliApplication.kt
android/app/src/main/java/com/oubli/wallet/data/: WalletRepository.kt  WalletRepositoryImpl.kt
android/app/src/main/java/com/oubli/wallet/di/: WalletModule.kt
android/app/src/main/java/com/oubli/wallet/platform/: KeystoreStorage.kt
android/app/src/main/java/com/oubli/wallet/ui/: BalanceScreen.kt  LockedScreen.kt  MainScreen.kt  OnboardingScreen.kt  QRScannerScreen.kt  SeedBackupScreen.kt
android/app/src/main/java/com/oubli/wallet/ui/balance/: ActivityList.kt  BalanceScreen.kt  ContactDetailDialog.kt  ContactListDialog.kt  ReceiveDialog.kt  SendDialog.kt  ShowSeedPhraseDialog.kt
android/app/src/main/java/com/oubli/wallet/ui/components/: DualAmountInput.kt  FullScreenTaskDialog.kt
android/app/src/main/java/com/oubli/wallet/ui/theme/: Theme.kt
android/app/src/main/java/com/oubli/wallet/ui/util/: Bolt11Utils.kt  ErrorPresentation.kt  QrUtils.kt  ShareUtils.kt
android/app/src/main/java/com/oubli/wallet/viewmodel/: WalletUiState.kt  WalletViewModel.kt
android/app/src/main/java/uniffi/oubli/: oubli.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/oubli/wallet/viewmodel/: WalletViewModelTest.kt
crates/: CLAUDE.md
crates/oubli-auth/: Cargo.toml  README.md
crates/oubli-auth/src/: error.rs  kek.rs  lib.rs  pin.rs  session.rs  tier.rs
crates/oubli-backup/: Cargo.toml  README.md
crates/oubli-backup/src/: cloud.rs  error.rs  lib.rs  restore.rs  seed_display.rs
crates/oubli-bridge/: Cargo.toml  README.md  build.rs
crates/oubli-bridge/src/: lib.rs  oubli.udl  telemetry.rs
crates/oubli-store/: Cargo.toml  README.md
crates/oubli-store/src/: blob.rs  error.rs  lib.rs  mock.rs  platform.rs
crates/oubli-swap/: Cargo.toml  README.md
crates/oubli-swap/js/: bundle.js
crates/oubli-swap/src/: error.rs  lib.rs  runtime.rs  telemetry.rs  types.rs
crates/oubli-wallet/: Cargo.toml  README.md  build.rs
crates/oubli-wallet/src/: actions.rs  config.rs  contacts.rs  core.rs  denomination.rs  error.rs  lib.rs  operations.rs  paymaster.rs  queue.rs  rpc.rs  signing.rs  state.rs  submitter.rs  swap.rs  telemetry.rs
crates/oubli-wallet/src/networks/: devnet.rs  mainnet.rs  mod.rs  sepolia.rs
crates/oubli-wallet/tests/: README.md  devnet_integration.rs  integration.rs  mainnet.env.example  mainnet_full_flow.rs  sepolia.env.example  sepolia_full_flow.rs
crates/oubli-wallet/tests/support/: mod.rs
devnet/: tongo_class.json
docs/: architecture-deep-dive.md  change-map.md  env.md
docs/testing/: coverage.md
ios/: BITCOINUI_REVIEW.md  CLAUDE.md  project.yml
ios/Oubli/: OubliApp.swift
ios/Oubli.xcodeproj/: project.pbxproj
ios/Oubli.xcodeproj/project.xcworkspace/xcuserdata/adrienlacombe.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Oubli.xcodeproj/xcuserdata/adrienlacombe.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Oubli/Platform/: KeychainStorage.swift
ios/Oubli/Theme/: OubliColors.swift
ios/Oubli/ViewModels/: WalletViewModel.swift
ios/Oubli/Views/: BalanceView.swift  ContactDetailSheet.swift  ContactListView.swift  ContactPickerView.swift  ContentView.swift  DualAmountInput.swift  LockedView.swift  OnboardingView.swift  ProcessingView.swift  QRScannerSheet.swift  QRScannerView.swift  ReceiveSheet.swift  SeedBackupView.swift  SeedPhraseSheet.swift  SendSheet.swift
ios/OubliUITests/: SeedPhraseUITests.swift  WalletE2ETests.swift
oubli-swap-js/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
oubli-swap-js/src/: index.ts  polyfills.ts  signer.ts  storage.ts
