[package]
name = "oubli-backup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oubli-store = { workspace = true }
krusty-kms = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
bip39 = { workspace = true }
