[package]
name = "oubli-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
oubli-wallet = { workspace = true }
oubli-swap = { workspace = true }
oubli-auth = { workspace = true }
oubli-store = { workspace = true }
oubli-backup = { workspace = true }
krusty-kms = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
