[package]
name = "oubli-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
devnet = ["url"]

[dependencies]
oubli-auth = { workspace = true }
oubli-store = { workspace = true }
oubli-backup = { workspace = true }
oubli-swap = { workspace = true }
krusty-kms = { workspace = true }
krusty-kms-common = { workspace = true }
krusty-kms-crypto = { workspace = true }
krusty-kms-sdk = { workspace = true }
krusty-kms-client = { workspace = true }
starknet-types-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
url = { version = "2", optional = true }

[dev-dependencies]
serial_test = "3"
